# models/data_body/buy_body.go
@@ -1,0 +1,6 @@
+package data_body
+
+type BodyBuyToken struct {
+	Link string 	`json:"link"`
+	Address string 	`json:"address"`
+}
