# models/wallet.go
@@ -1,6 +1,0 @@
-package models
-
-type Wallet struct {
-	Mid string `json:"mid"`
-	Balance int64 `json:"balance"`
-}
